<resources>
    <!--    <string name="app_name">Distributor Sales</string>-->
    <string name="app_name">Powersoaps Sales</string>
    <string name="login">Login</string>
    <string name="enter_your_registered_mobile_number_n_for_verification">Enter your registered mobile number\n for verification</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="get_otp">Get OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_the_otp_sent_to_your_registered_n_mobile_number">Enter the OTP sent to your registered\n mobile number</string>
    <string name="otp_verification">OTP Verification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="pendingFragmentName">Pending</string>
    <string name="full_summary">Full Summary</string>
    <string name="_26_february_2022">26 February,2022</string>
    <string name="shop_name">Shop Name *</string>
    <string name="qty">QTY</string>
    <string name="search_products_by_name_or_code">Search products</string>
    <string name="enter_shop_Name">Enter Shop Name</string>
    <string name="items">Items</string>
    <string name="Login">LOGIN</string>
    <string name="rupee">₹</string>
    <string name="sales">Sales</string>
    <string name="view_on_map">View on map</string>
    <string name="visited">Visited</string>
    <string name="call_store">Call store</string>
    <string name="let_s_deliver_orders">Let\'s Deliver Orders</string>
    <string name="murugan_stores">Murugan Stores</string>
    <string name="what_you_wish_to_do">What you wish to do?</string>
    <string name="take_orders">Take Orders</string>
    <string name="orders_history">Orders History</string>
    <string name="order_collection">Order Collection</string>
    <string name="sales_return">Sales Return</string>
    <string name="shop_insight">Shop Insight</string>
    <string name="update_location">Update Location</string>
    <string name="about_shop">About Shop</string>
    <string name="order_history">Order History</string>
    <string name="order_details">Order Details</string>
    <string name="image_format_should_be_in_jpg_ong_pdf">Supported Image Format : JPG , PNG</string>
    <string name="ordered_on_21_january_2022">Ordered on 21 January, 2022</string>
    <string name="order_id_657482">Order ID : 657482</string>
    <string name="items_12">| Items : 12</string>
    <string name="delivered_on_22_january_2022">Delivery in process</string>
    <string name="delivered_by_mr_arun">We have received your order</string>
    <string name="item">ITEM</string>
    <string name="amount">Amount</string>
    <string name="view_more">View More</string>
    <string name="_17877">17877</string>
    <string name="gst_5">GST (18%)</string>
    <string name="_2345">2345</string>
    <string name="total_amount">Total Amount</string>
    <string name="_21789">21789</string>
    <string name="let_s_deliver_order">Let\'s Deliver Order</string>
    <string name="payment_details">Payment Details</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="outstanding">Outstanding</string>
    <string name="_19_365">19,365</string>
    <string name="_0">0</string>
    <string name="collect_amount">Collect Amount</string>
    <string name="traders">Traders</string>
    <string name="filters">Filter</string>
    <string name="active_power_breeze_soap_1kg">Active Power Breeze Soap 1kg</string>
    <string name="nos">NOS</string>
    <string name="box">BOX</string>
    <string name="_7356">7356</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="orsymbol"> | </string>
    <string name="nos_value_144_86">NOS value 144.86</string>
    <string name="today">Today</string>
    <string name="backslash">/</string>
    <string name="_45">45</string>
    <string name="today_s_total_delivery_items">Today’s Total Delivery Items</string>
    <string name="_563">563</string>
    <string name="today_s_total_collection">Today’s Total Collection</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="set_password">Set Password</string>
    <string name="forget_password">Forgot password?</string>
    <string name="enter_registered_mobile_number">Enter Registered Mobile Number</string>

    <string name="today_s_productivity">Today’s Productivity</string>
    <string name="_5">5</string>
    <string name="let_s_load_items">Let’s Load Items</string>
    <string name="view_today_s_loading_sheet_to_get_started">View today’s loading sheet to get started</string>
    <string name="view_loading_sheet">View Loading Sheet</string>
    <string name="today_s_beat">TODAY’S BEAT</string>
    <string name="pending_Order">PENDING ORDER</string>
    <string name="how_would_you_like_to_take_orders">How would you like to take orders?</string>
    <string name="save_a_lot_of_time_and_do_more_with_nloading_previous_orders">Save a lot of time and do more with \nloading previous orders</string>
    <string name="load_previous_order">Load Previous Order</string>
    <string name="take_fresh_order">Take Fresh Order</string>
    <string name="_240_nos">240 Nos</string>
    <string name="_4_826">4,826</string>
    <string name="_126">126</string>
    <string name="_10_000">10,000</string>
    <string name="view_full_summary">View full summary</string>
    <string name="total_items">Total Items</string>
    <string name="_362">362</string>
    <string name="_2_63_286">₹ 2,63,286</string>
    <string name="total_sales">Total Sales</string>
    <string name="order_placed_successfully">Order Placed successfully</string>
    <string name="do_you_wish_to_collect_the_amount_for_this_order">Do you wish to collect the amount for this order?</string>
    <string name="order_summary">Order Summary</string>
    <string name="_70_tax_2">70 Tax(2%)</string>
    <string name="_34_675">34,675</string>
    <string name="filter">Filter</string>
    <string name="total_items_4">Total Items : 0</string>
    <string name="_12_475"></string>
    <string name="proceed">Proceed</string>
    <string name="achieved">Achieved</string>
    <string name="target">Target</string>
    <string name="balance">Balance</string>
    <string name="_2_74_000">2,74,000</string>
    <string name="total_paid">Total Paid</string>
    <string name="place_order">Place Order</string>
    <string name="today_s_total_order_value">Today’s Total Order Value</string>
    <string name="channel_name">PowerSoap Sales Man</string>
    <string name="channel_description">Enable to receive Powersoaps updates.</string>
    <string name="channel_id">my_channel_01</string>

    <string name="loading">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="terms_and_conditions">Terms and conditions</string>

    <string name="aboutus">About powersoap</string>
    <string name="privacy">Privacy Policy</string>
    <string name="support">Support</string>
    <string name="get_24_7_support_with_power_soap">Get 24*7 support with Power Soap</string>
    <string name="need_assistance_ndo_not_hesitate_to_mail_us_or_call_us">Need assistance?\nDo not hesitate to Mail Us or Call us</string>
    <string name="mail_us">Mail US</string>
    <string name="or_give_us_a_call_on">or give us a call on</string>
    <string name="_1_800_676_2775">04-132266111</string>
    <string name="done">Done</string>
    <string name="clear_all"><font fgcolor="#FFFFFFFF"><u>Clear All</u></font></string>
    <string name="sec">sec</string>
    <string name="item_name">Item Name</string>
    <string name="your_product_list_is_empty">Your Product List is Empty</string>
    <string name="your_order_list_is_empty">Your Order List is Empty</string>
    <string name="total_products_0">Total Products : 0</string>
    <string name="search_products_by_name">Search products by Name</string>
    <string name="_4_kms_away">4 kms away</string>
    <string name="save_shop">Save Shop</string>
    <string name="contact_number">Contact Number *</string>
    <string name="contact_person">Contact Person Name</string>
    <string name="shop_type">Shop Type *</string>
    <string name="address">Address *</string>
    <string name="city">City *</string>
    <string name="pincode">Pincode *</string>
    <string name="attach_license">Attach License</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_format_should_be_in_jpg_png_pdf">Image format should be in jpg/png/pdf</string>
    <string name="license_number">License Number</string>
    <string name="boy">Boy</string>
    <string name="coordinates">Coordinates</string>
    <string name="call">Call</string>
    <string name="no_62_67_annamalai_complex_nrailway_colony_first_street_nthandayarpettai_nchennai_600091">No 62/67 Annamalai Complex,\nRailway colony First Street,\nThandayarpettai,\nChennai-600091</string>
    <string name="about_store">About Store</string>
    <string name="no_internet_available">No Internet Available</string>
    <string name="make_sure_wifi_or_cellular_data_is_turned_n_on_and_then_try_again">Make sure wifi or cellular data is turned\n on and then try again.</string>
    <string name="try_again">Try again</string>
    <string name="completed">completed</string>
    <string name="pending">pending</string>
    <string name="cancel">Cancel</string>
    <string name="shop_insights">Shop Insights</string>
    <string name="total_volume">Total Volume</string>
    <string name="monthly_volume">Monthly Volume</string>
    <string name="_10_piece">| 10 piece / Box</string>
    <string name="no_of_items">No Of Items</string>
    <string name="outlets_covered_today">Outlets covered today :</string>
    <string name="total_insights">Total Insights</string>
    <string name="monthly_insights">Monthly Insights</string>
    <string name="update_shop">Update Shop</string>
    <string name="choose_upload">Choose Upload</string>
    <string name="images">Images</string>
    <string name="document">Document</string>
    <string name="you_are_using_an_older_version_of_application_please_update_to_the_latest_version_for_the_best_experience">You are using an older version of application. Please update to the latest version for the best experience.</string>
    <string name="update">Update</string>
    <string name="support_call">0413-132266111</string>
    <string name="no_pending_orders">No Pending Orders</string>
    <string name="shop_covered_today">Shop Covered Today</string>


</resources>