<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.activity.summary.day.DaySummaryFragment">
    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/_26_february_2022"
            android:textColor="#232323"
            android:textSize="16sp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginStart="19dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/regular"
            android:text="@string/outlets_covered_today"
            android:textColor="#232323"
            android:textSize="14sp" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginStart="4dp"
            android:layout_marginTop="6dp"
            android:layout_toEndOf="@+id/content"
            android:fontFamily="@font/regular"
            android:text="28/45"
            android:textColor="#232323"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/date"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:background="@drawable/loadingscreenlayoutbox">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="148dp"
                android:layout_height="30dp"
                android:layout_marginStart="19dp"
                android:fontFamily="@font/semibold"
                android:layout_weight="3"
                android:gravity="start|center"
                android:text="@string/shop_name"
                app:textAllCaps="true"
                android:textColor="#686868"
                android:textSize="12sp" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/semibold"
                android:gravity="center_horizontal"
                android:layout_marginEnd="14dp"
                android:layout_weight="1"
                android:text="@string/items"
                app:textAllCaps="true"
                android:textColor="#686868"
                android:textSize="12sp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/amounttag"
                android:layout_width="68dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/semibold"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/sales"
                app:textAllCaps="true"
                android:textColor="#686868"
                android:visibility="visible"
                android:textSize="12sp" />


        </LinearLayout>
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listitem"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:layout_marginEnd="14dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/step1line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/loadingline"
            android:fontFamily="@font/bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="14dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="30dp"
            android:orientation="horizontal"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_weight="1"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:text="Total Shop"
                    android:textColor="#232323"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:id="@+id/totalItems"
                    android:gravity="center_horizontal"
                    android:text="@string/_0"
                    android:textColor="#232323"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:orientation="vertical">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:text="@string/total_sales"
                    android:textColor="#232323"/>
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:id="@+id/totalSales"
                    android:text="@string/_0"
                    android:textColor="#232323"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</LinearLayout>