<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@drawable/gradient"
    tools:context=".ui.main.activity.shopdetail.ShopInSightsActivity">
    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_back" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/medium"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:text="@string/shop_insights"
                    android:textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/shopName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:maxLength="25"
                    android:ellipsize="end"
                    android:text="@string/murugan_stores"
                    android:textColor="#FFFFFF"
                    android:textSize="12sp" />
            </LinearLayout>



        </LinearLayout>

        <TextView
            android:id="@+id/step1line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="?actionBarSize"
            android:layout_marginRight="16dp"
            android:background="@drawable/homeline"
            android:fontFamily="@font/bold" />




        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/totalInsight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/step1line"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/total_insights"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout"
            android:layout_below="@+id/totalInsight"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/tdycover"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_totalvolumeicon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tdycovertext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/total_volume"
                    android:textColor="#FFFFFF" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/totalVolume"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:fontFamily="@font/semibold"
                        android:text="@string/_0"
                        android:textColor="#FFFFFF"
                        android:textSize="22sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/step2line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_below="@+id/linearLayout"
            android:layout_marginTop="?actionBarSize"
            android:layout_marginRight="16dp"
            android:background="@drawable/homeline"
            android:fontFamily="@font/bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/monthlyInsight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/step2line"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/monthly_insights"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayoutone"
            android:layout_below="@+id/monthlyInsight"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/productivityimg"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ic_totalmonthlyicon" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/producttext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/monthly_volume"
                    android:textColor="#FFFFFF" />



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/productcount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:fontFamily="@font/semibold"
                        android:text="@string/_126"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>